tests/build/cases/ui_node/missing_delegate_expr.stderr
error: expected `delegate = <expr>`
 --> cases/ui_node/missing_delegate_expr.rs:6:11
  |
6 | #[ui_node(delegate)]
  |           ^^^^^^^^

error: expected `delegate_mut = <expr>`
  --> cases/ui_node/missing_delegate_expr.rs:12:35
   |
12 | #[ui_node(delegate = &self.inner, delegate_mut)]
   |                                   ^^^^^^^^^^^^

error: expected `delegate = <expr>`
  --> cases/ui_node/missing_delegate_expr.rs:18:20
   |
18 | #[ui_node(delegate =)]
   |                    ^

warning: unused import: `widget_instance::UiNode`
 --> cases/ui_node/missing_delegate_expr.rs:1:30
  |
1 | use zero_ui::core::{ui_node, widget_instance::UiNode};
  |                              ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
